--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="card-action">
               <a href="#">link</a>
-              <a href="#">Code</a>
+              <a href="https://github.com/zhitnikv/zhitnikv.github.io">Code</a>
             </div>
           </div>
         </div>
