--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
       <!--Import Google Icon Font-->
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
       <link type="text/css" rel="stylesheet" href="css/main.css"/>
@@ -13,7 +14,14 @@
     <body>
 
     <!-- Modal Trigger -->
-  <a class="waves-effect waves-light btn modal-trigger" href="#modal1">Modal</a>
+  <div class="waves-effect waves-light btn modal-trigger">
+    <div class="head-description">
+      Here presented some of my practical works which has been done during my studying and growing as a front-end developer. I'll appreciate any comments to code and feel free to contact me.
+    </div>
+    <div class="head-contact">
+      Vitaliy Zhitnik<br> VitaliyZhitnik22.gmail.com<br>0665178804
+    </div>
+  </div>
 
   <!-- Modal Structure -->
   <div id="modal1" class="modal">
@@ -31,15 +39,15 @@
       <div class="col s12 m2 o3">
           <div class="card">
             <div class="card-image">
-              <img src="images/sample-1.jpg">
-              <span class="card-title">Card Title</span>
+              <img src="images/sample-2.jpg">
+              <span class="card-title">This portfolio</span>
             </div>
             <div class="card-content">
               <p>I am a very simple card. I am good at containing small bits of information.
               I am convenient because I require little markup to use effectively.</p>
             </div>
             <div class="card-action">
-              <a href="#">link</a>
+              <a href="#">Demo</a>
               <a href="https://github.com/zhitnikv/zhitnikv.github.io">Code</a>
             </div>
           </div>
@@ -57,7 +65,7 @@
               I am convenient because I require little markup to use effectively.</p>
             </div>
             <div class="card-action">
-              <a href="#">link</a>
+              <a href="#">Demo</a>
               <a href="#">Code</a>
             </div>
           </div>
@@ -74,7 +82,7 @@
               I am convenient because I require little markup to use effectively.</p>
             </div>
             <div class="card-action">
-              <a href="#">link</a>
+              <a href="#">Demo</a>
               <a href="#">Code</a>
             </div>
           </div>
@@ -91,7 +99,7 @@
               I am convenient because I require little markup to use effectively.</p>
             </div>
             <div class="card-action">
-              <a href="#">link</a>
+              <a href="#">Demo</a>
               <a href="#">Code</a>
             </div>
           </div>
@@ -108,7 +116,7 @@
               I am convenient because I require little markup to use effectively.</p>
             </div>
             <div class="card-action">
-              <a href="#">link</a>
+              <a href="#">Demo</a>
               <a href="#">Code</a>
             </div>
           </div>
@@ -125,7 +133,7 @@
               I am convenient because I require little markup to use effectively.</p>
             </div>
             <div class="card-action">
-              <a href="#">link</a>
+              <a href="#">Demo</a>
               <a href="#">Code</a>
             </div>
           </div>
