--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
             <div class="card-action">
               <a href="#">Demo</a>
-              <a href="#">Code</a>
+              <a href="https://github.com/zhitnikv/zhitnikv.github.io/tree/master/works/catalog">Code</a>
             </div>
           </div>
         </div>
