--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               I am convenient because I require little markup to use effectively.</p>
             </div>
             <div class="card-action">
-              <a href="https://zhitnikv.github.io/works/catalog/">Demo</a>
+              <a href="https://zhitnikv.github.io/works/catalog">Demo</a>
               <a href="https://github.com/zhitnikv/zhitnikv.github.io/tree/master/works/catalog">Code</a>
             </div>
           </div>
