--- a/index.html
+++ b/index.html
@@ -1,161 +1,109 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-      <link type="text/css" rel="stylesheet" href="css/main.css"/>
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-
-    <body>
-
-    <!-- Modal Trigger -->
-  <div class="waves-effect waves-light btn modal-trigger">
-    <div class="head-description">
-      Here presented some of my practical works which has been done during my studying and growing as a front-end developer. I'll appreciate any comments to code and feel free to contact me.
+<html>
+<head>
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css"/>
+	<link rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+	<link rel="stylesheet" href="css/main.css"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+ 	<header>
+	 	<div class="description-container">
+	    	<div class="description">
+	      		Here presented some of my practical works which has been done<br> during my studying and growing as a front-end developer.<br> I'll appreciate any comments to code and feel free to contact me.
+	    	</div>
+	    	<div class="contact">
+	      		Vitaliy Zhitnik<br>vitaliyzhitnik22.gmail.com<br>0665178804
+	    	</div>
+    	</div>
+	</header>
+	<div class="container">
+		<div class="col s12 m2">
+		  <div class="card">
+		    <div class="card-image">
+		      <img src="images/sample-2.jpg">
+		      <span class="card-title car">This portfolio</span>
+		    </div>
+		    <div class="card-content">
+		      <p><br>Materialize, CSS animation<br>
+		      <br></p>
+		    </div>
+		    <div class="card-action">
+		      <a href="#">Demo</a>
+		      <a href="https://github.com/zhitnikv/zhitnikv.github.io">Code</a>
+		    </div>
+		  </div>
+		</div>
+		<div class="col s12 m2">
+		  <div class="card">
+		    <div class="card-image">
+		      <img src="images/sample-3.jpg">
+		      <span class="card-title">Music catalog</span>
+		    </div>
+		    <div class="card-content">
+		      <p><br>React JS<br><br></p>
+		    </div>
+		    <div class="card-action">
+		      <a href="#">Demo</a>
+		      <a href="https://github.com/zhitnikv/zhitnikv.github.io/tree/master/works/catalog">Code</a>
+		    </div>
+		  </div>
+		</div>
+		<div class="col s12 m2">
+		  <div class="card">
+		    <div class="card-image">
+		      <img src="images/sample-4.jpg">
+		      <span class="card-title">Classes ES6</span>
+		    </div>
+		    <div class="card-content">
+		      <p><br>Classes (ES6)<br><br></p>
+		    </div>
+		    <div class="card-action">
+		      <a href="#"></a>
+		      <a href="https://github.com/zhitnikv/classes">Code</a>
+		    </div>
+		  </div>
+		</div>
+		<div class="col s12 m2">
+		  <div class="card">
+		    <div class="card-image">
+		      <img src="images/blank.jpg">
+		      <span class="card-title">..</span>
+		    </div>
+		    <div class="card-content">
+		      <p>.<br>.<br>.</p>
+		    </div>
+		    <div class="card-action">
+		      <a href="#"></a>
+		      <a href="#"></a>
+		    </div>
+		  </div>
+		</div>
+		<div class="col s12 m2">
+		  <div class="card">
+		    <div class="card-image">
+		      <img src="images/blank.jpg">
+		      <span class="card-title">..</span>
+		    </div>
+		    <div class="card-content">
+		      <p>.<br>.<br>.</p>
+		    </div>
+		    <div class="card-action">
+		      <a href="#"></a>
+		      <a href="#"></a>
+		    </div>
+		  </div>
+	 </div>
+<footer>
+	<div class="description-container">
+    	<div class="description">
+      		LinkedIn<br><a href="https://github.com/zhitnikv">Github</a>
+    	</div>
     </div>
-    <div class="head-contact">
-      Vitaliy Zhitnik<br> VitaliyZhitnik22.gmail.com<br>0665178804
-    </div>
-  </div>
-
-  <!-- Modal Structure -->
-  <div id="modal1" class="modal">
-    <div class="modal-content">
-      <h4>Modal Header</h4>
-      <p>A bunch of text</p>
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat">Agree</a>
-    </div>
-  </div>
-      
-
-    <div class="container">
-      <div class="col s12 m2 o3">
-          <div class="card">
-            <div class="card-image">
-              <img src="images/sample-2.jpg">
-              <span class="card-title">This portfolio</span>
-            </div>
-            <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-              <a href="#">Demo</a>
-              <a href="https://github.com/zhitnikv/zhitnikv.github.io">Code</a>
-            </div>
-          </div>
-        </div>
-
-
-      <div class="col s12 m2 o3">
-          <div class="card">
-            <div class="card-image">
-              <img src="images/sample-1.jpg">
-              <span class="card-title">Card Title</span>
-            </div>
-            <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-              <a href="#">Demo</a>
-              <a href="#">Code</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col s12 m2 o3">
-          <div class="card">
-            <div class="card-image">
-              <img src="images/sample-3.jpg">
-              <span class="card-title">Card Title</span>
-            </div>
-            <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-              <a href="https://zhitnikv.github.io/works/catalog">Demo</a>
-              <a href="https://github.com/zhitnikv/zhitnikv.github.io/tree/master/works/catalog">Code</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col s12 m2 o3">
-          <div class="card">
-            <div class="card-image">
-              <img src="images/sample-1.jpg">
-              <span class="card-title">Card Title</span>
-            </div>
-            <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-              <a href="#">Demo</a>
-              <a href="#">Code</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col s12 m2 o3">
-          <div class="card">
-            <div class="card-image">
-              <img src="images/sample-1.jpg">
-              <span class="card-title">Card Title</span>
-            </div>
-            <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-              <a href="#">Demo</a>
-              <a href="#">Code</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col s12 m2 o3">
-          <div class="card">
-            <div class="card-image">
-              <img src="images/sample-1.jpg">
-              <span class="card-title">Card Title</span>
-            </div>
-            <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-              <a href="#">Demo</a>
-              <a href="#">Code</a>
-            </div>
-          </div>
-        </div>
-
-
-      </div>
-      </div>
-    </body>    
-
-
-      <script>
-        $(document).ready(function(){
-    $('.target').pushpin({
-      top: 0,
-      bottom: 1000,
-      offset: 0
-    });
-  });
-      </script>
-      <!--Import jQuery before materialize.js-->
-      <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-      <script type="text/javascript" src="js/materialize.min.js"></script>
-    </body>
-  </html>
+</footer>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="js/materialize.min.js"></script>
+</body>
+</html>
