--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		      <br></p>
 		    </div>
 		    <div class="card-action">
-		      <a href="#">Demo</a>
+		      <a href="http://zhitnikv.github.io/">Demo</a>
 		      <a href="https://github.com/zhitnikv/zhitnikv.github.io">Code</a>
 		    </div>
 		  </div>
@@ -46,7 +46,7 @@
 		      <p><br>React JS<br><br></p>
 		    </div>
 		    <div class="card-action">
-		      <a href="#">Demo</a>
+		      <a href="http://zhitnikv.github.io/works/catalog/">Demo</a>
 		      <a href="https://github.com/zhitnikv/zhitnikv.github.io/tree/master/works/catalog">Code</a>
 		    </div>
 		  </div>
