--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
  	<header>
 	 	<div class="description-container">
 	    	<div class="description">
-	      		Here presented some of my practical works which has been done<br> during my studying and growing as a front-end developer.<br> I'll appreciate any comments to code and feel free to contact me.
+	      		<p>Here presented some of my practical works that I've done while</p>
+	      		<p>I was studying as a front-end developer.</p>
+	      		<p>I'll appreciate any comments to code and feel free to contact me.</p>
 	    	</div>
 	    	<div class="contact">
 	      		Vitaliy Zhitnik<br>vitaliyzhitnik22.gmail.com<br>0665178804
