--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 	      		<p>I'll appreciate any comments to code and feel free to contact me.</p>
 	    	</div>
 	    	<div class="contact">
-	      		Vitaliy Zhitnik<br>vitaliyzhitnik22.gmail.com<br>0665178804
+	      		<p>Vitaliy Zhitnik</p>
+	      		<p>vitaliyzhitnik22.gmail.com</p>
+	      		<p>0665178804</p>
 	    	</div>
     	</div>
 	</header>
@@ -29,11 +31,10 @@
 		      <span class="card-title car">This portfolio</span>
 		    </div>
 		    <div class="card-content">
-		      <p><br>Materialize, CSS animation<br>
-		      <br></p>
+		      <p><br>This portfolio was made using Materialize and CSS animation<br></p>
 		    </div>
 		    <div class="card-action">
-		      <a href="http://zhitnikv.github.io/">Demo</a>
+		      <a href="#">Demo</a>
 		      <a href="https://github.com/zhitnikv/zhitnikv.github.io">Code</a>
 		    </div>
 		  </div>
@@ -45,10 +46,10 @@
 		      <span class="card-title">Music catalog</span>
 		    </div>
 		    <div class="card-content">
-		      <p><br>React JS<br><br></p>
+		      <p><br>The search of musical compositions in the catalogue. This application was made using React JS<br></p>
 		    </div>
 		    <div class="card-action">
-		      <a href="http://zhitnikv.github.io/works/catalog/">Demo</a>
+		      <a href="#">Demo</a>
 		      <a href="https://github.com/zhitnikv/zhitnikv.github.io/tree/master/works/catalog">Code</a>
 		    </div>
 		  </div>
@@ -60,7 +61,7 @@
 		      <span class="card-title">Classes ES6</span>
 		    </div>
 		    <div class="card-content">
-		      <p><br>Classes (ES6)<br><br></p>
+		      <p>This application allows you to calculate the average monthly costs on using paid Internet services and to rank the results. It was made using classes (ES6)</p>
 		    </div>
 		    <div class="card-action">
 		      <a href="#"></a>
