--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		      <p><br>This portfolio was made using Materialize and CSS animation<br></p>
 		    </div>
 		    <div class="card-action">
-		      <a href="#">Demo</a>
+		      <a href="http://zhitnikv.github.io/"">Demo</a>
 		      <a href="https://github.com/zhitnikv/zhitnikv.github.io">Code</a>
 		    </div>
 		  </div>
@@ -49,7 +49,7 @@
 		      <p><br>The search of musical compositions in the catalogue. This application was made using React JS<br></p>
 		    </div>
 		    <div class="card-action">
-		      <a href="#">Demo</a>
+		      <a href="zhitnikv.github.io/works/catalog/">Demo</a>
 		      <a href="https://github.com/zhitnikv/zhitnikv.github.io/tree/master/works/catalog">Code</a>
 		    </div>
 		  </div>
