--- a/index.html
+++ b/index.html
@@ -1,112 +1,111 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-	<link rel="stylesheet" href="css/normalize.css"/>
-	<link rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-	<link rel="stylesheet" href="css/main.css"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+  <title>Portfolio</title>
+  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body>
- 	<header>
-	 	<div class="description-container">
-	    	<div class="description">
-	      		<p>Here presented some of my practical works that I've done while</p>
-	      		<p>I was studying as a front-end developer.</p>
-	      		<p>I'll appreciate any comments to code and feel free to contact me.</p>
-	    	</div>
-	    	<div class="contact">
-	      		<p>Vitaliy Zhitnik</p>
-	      		<p>vitaliyzhitnik22.gmail.com</p>
-	      		<p>0665178804</p>
-	    	</div>
-    	</div>
-	</header>
-	<div class="container">
-		<div class="col s12 m2">
-		  <div class="card">
-		    <div class="card-image">
-		      <img src="images/sample-2.jpg">
-		      <span class="card-title car">This portfolio</span>
-		    </div>
-		    <div class="card-content">
-		      <p><br>This portfolio was made using Materialize and CSS animation<br></p>
-		    </div>
-		    <div class="card-action">
-		      <a href="http://zhitnikv.github.io/"">Demo</a>
-		      <a href="https://github.com/zhitnikv/zhitnikv.github.io">Code</a>
-		    </div>
-		  </div>
-		</div>
-		<div class="col s12 m2">
-		  <div class="card">
-		    <div class="card-image">
-		      <img src="images/sample-3.jpg">
-		      <span class="card-title">Music catalog</span>
-		    </div>
-		    <div class="card-content">
-		      <p><br>The search of musical compositions in the catalogue. This application was made using React JS<br></p>
-		    </div>
-		    <div class="card-action">
-		      <a href="zhitnikv.github.io/works/catalog/">Demo</a>
-		      <a href="https://github.com/zhitnikv/zhitnikv.github.io/tree/master/works/catalog">Code</a>
-		    </div>
-		  </div>
-		</div>
-		<div class="col s12 m2">
-		  <div class="card">
-		    <div class="card-image">
-		      <img src="images/sample-4.jpg">
-		      <span class="card-title">Classes ES6</span>
-		    </div>
-		    <div class="card-content">
-		      <p>This application allows you to calculate the average monthly costs on using paid Internet services and to rank the results. It was made using classes (ES6)</p>
-		    </div>
-		    <div class="card-action">
-		      <a href="#"></a>
-		      <a href="https://github.com/zhitnikv/classes">Code</a>
-		    </div>
-		  </div>
-		</div>
-		<div class="col s12 m2">
-		  <div class="card">
-		    <div class="card-image">
-		      <img src="images/blank.jpg">
-		      <span class="card-title">..</span>
-		    </div>
-		    <div class="card-content">
-		      <p>.<br>.<br>.</p>
-		    </div>
-		    <div class="card-action">
-		      <a href="#"></a>
-		      <a href="#"></a>
-		    </div>
-		  </div>
-		</div>
-		<div class="col s12 m2">
-		  <div class="card">
-		    <div class="card-image">
-		      <img src="images/blank.jpg">
-		      <span class="card-title">..</span>
-		    </div>
-		    <div class="card-content">
-		      <p>.<br>.<br>.</p>
-		    </div>
-		    <div class="card-action">
-		      <a href="#"></a>
-		      <a href="#"></a>
-		    </div>
-		  </div>
-	 </div>
-<footer>
-	<div class="description-container">
-    	<div class="description">
-      		LinkedIn<br><a href="https://github.com/zhitnikv">Github</a>
-    	</div>
+  <nav class="cyan darken-2" role="navigation">
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Portfolio</a>
     </div>
-</footer>
-	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript" src="js/materialize.min.js"></script>
-</body>
+  </nav>
+  <main>
+    <div class="container">
+      <div class="section">   
+        <div class="row">
+          <div class="col s12 m4">
+            <div class="card">
+              <div class="card-image">
+                <img src="images/1.jpg">
+                <span class="card-title">React online store</span>
+              </div>
+              <div class="card-content">
+                <p>React / Redux<br>
+                Ramda<br>
+                Middleware
+                </p>
+              </div>
+              <div class="card-action">
+                <a href="#">Code</a>
+                <a href="#">Demo</a>
+              </div>
+            </div>
+          </div>
+          <div class="col s12 m4">
+            <div class="card">
+              <div class="card-image">
+                <img src="images/3.jpg">
+                <span class="card-title">Site</span>
+              </div>
+              <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information.
+                  I am convenient because I require little markup to use effectively.</p>
+              </div>
+              <div class="card-action">
+                <a href="#">Code</a>
+                <a href="#">Demo</a>
+              </div>
+            </div>
+          </div>
+          <div class="col s12 m4">
+            <div class="card">
+              <div class="card-image">
+                <img src="images/2.jpg">
+                <span class="card-title">This portfolio</span>
+              </div>
+              <div class="card-content">
+                <p>I am a very simple card. I am good at containing small bits of information.
+                  I am convenient because I require little markup to use effectively.</p>
+              </div>
+              <div class="card-action">
+                <a href="#">Code</a>
+                <a href="#">Demo</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br><br>
+    </div>
+  </main>
+  <footer class="page-footer blue darken-1">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Vitaliy Zhitnik</h5>
+          <p class="grey-text text-lighten-4">Here presented some of my practical works that I've done while I was studying as a <br> front-end developer. I'll appreciate any comments to code and feel free to contact me. </p>
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Links</h5>
+          <ul>
+            <li><a class="white-text" href="https://github.com/zhitnikv">GitHub</a></li>
+            <li><a class="white-text" href="https://www.linkedin.com/in/виталий-житник-ba873b150/">LinkedIn</a></li>
+            <li><a class="white-text" href="#!"></a></li>
+            <li><a class="white-text" href="#!"></a></li>
+          </ul>
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Contacts</h5>
+          <ul>
+            <li>0665178804</li>
+            <li>vitaliyzhitnik22@gmail.com</li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      2018
+      </div>
+    </div>
+  </footer>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
+  </body>
 </html>
