--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <span class="card-title">React online store</span>
               </div>
               <div class="card-content">
-                <p>React / Redux<br>
+                <p>React / Redux / Node JS<br>
                 Ramda<br>
-                Middleware
+                Bootstrap
                 </p>
               </div>
               <div class="card-action">
@@ -41,8 +41,9 @@
                 <span class="card-title">Site</span>
               </div>
               <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information.
-                  I am convenient because I require little markup to use effectively.</p>
+                <p>Materialize<br>
+                HTML / CSS
+                </p>
               </div>
               <div class="card-action">
                 <a href="#">Code</a>
