--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
             <div class="card">
               <div class="card-image">
                 <img src="images/2.jpg">
-                <span class="card-title">Site</span>
+                <span class="card-title">This portfolio</span>
               </div>
               <div class="card-content">
                 <p>Materialize<br>
-                HTML / CSS
+                HTML<br>CSS
                 </p>
               </div>
               <div class="card-action">
