--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="col s12 m4">
             <div class="card">
               <div class="card-image">
-                <img src="images/1.jpg">
+                <img src="images/1.png">
                 <span class="card-title">React online store</span>
               </div>
               <div class="card-content">
