--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 </p>
               </div>
               <div class="card-action">
-                <a href="#">Code</a>
-                <a href="#">Demo</a>
+                <a href="https://github.com/zhitnikv/zhitnikv.github.io">Code</a>
+                <a href="zhitnikv.github.io">Demo</a>
               </div>
             </div>
           </div>
