--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               </div>
               <div class="card-action">
                 <a href="https://github.com/zhitnikv/zhitnikv.github.io">Code</a>
-                <a href="zhitnikv.github.io">Demo</a>
+                <a href="#">Demo</a>
               </div>
             </div>
           </div>
