--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </p>
               </div>
               <div class="card-action">
-                <a href="#">Code</a>
+                <a href="https://github.com/zhitnikv/ReactStore">Code</a>
               </div>
             </div>
           </div>
